dropdown selct box icon button no longer getting cut off

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -496,7 +496,8 @@ td.category > div > h3 > a {
 
 .list-controls {
   .select-kit.dropdown-select-box .dropdown-select-box-header {
-    padding: 15px;
+    padding: 6px;
+    overflow: visible;
   }
 }
 
